// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete renders Autocomplete component 1`] = `
<div
  class="ds-u-clearfix ds-c-autocomplete"
>
  <div
    class="ds-u-clearfix"
  >
    <label
      class="ds-c-label"
      for="autocomplete_1"
      id="autocomplete_label_2"
    >
      <span
        class=""
      >
        autocomplete
      </span>
    </label>
    <input
      aria-autocomplete="list"
      aria-controls="autocomplete_owned_listbox_3"
      aria-expanded="false"
      aria-invalid="false"
      autocomplete="off"
      class="ds-c-field"
      id="autocomplete_1"
      labelid="autocomplete_label_2"
      name="autocomplete_field"
      role="combobox"
      type="text"
      value=""
    />
  </div>
  <button
    aria-label="Clear search to try again"
    class="ds-c-button ds-c-button--small ds-c-button--ghost ds-u-padding-right--0 ds-c-autocomplete__clear-btn"
    type="button"
  >
    Clear search
  </button>
</div>
`;

exports[`Autocomplete renders a snapshot 1`] = `
<div>
  <div
    class="ds-u-clearfix ds-c-autocomplete"
  >
    <div
      class="ds-u-clearfix"
    >
      <label
        class="ds-c-label"
        for="autocomplete_55"
        id="autocomplete_label_56"
      >
        <span
          class=""
        >
          autocomplete
        </span>
      </label>
      <input
        aria-autocomplete="list"
        aria-controls="autocomplete_owned_listbox_57"
        aria-expanded="false"
        aria-invalid="false"
        autocomplete="off"
        class="ds-c-field"
        id="autocomplete_55"
        labelid="autocomplete_label_56"
        name="autocomplete_field"
        role="combobox"
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="Clear search to try again"
      class="ds-c-button ds-c-button--small ds-c-button--ghost ds-u-padding-right--0 ds-c-autocomplete__clear-btn"
      type="button"
    >
      Clear search
    </button>
  </div>
</div>
`;

exports[`Autocomplete renders item with custom className 1`] = `
Array [
  <li
    aria-selected="false"
    class="ds-c-autocomplete__list-item"
    id="downshift-3-item-0"
    role="option"
  >
    Normal item
  </li>,
  <li
    aria-selected="false"
    class="custom-class ds-c-autocomplete__list-item"
    id="downshift-3-item-1"
    role="option"
  >
    Special item
  </li>,
]
`;

exports[`Autocomplete renders items with children property 1`] = `
<ul
  class="ds-c-list--bare"
  id="autocomplete_owned_listbox_15"
  role="listbox"
>
  <li
    aria-selected="false"
    class="ds-c-autocomplete__list-item"
    id="downshift-2-item-0"
    role="option"
  >
    Carrots 
    <strong>
      (1)
    </strong>
  </li>
  <li
    aria-selected="false"
    class="ds-c-autocomplete__list-item"
    id="downshift-2-item-1"
    role="option"
  >
    Cookies 
    <strong>
      (3)
    </strong>
  </li>
  <li
    aria-selected="false"
    class="ds-c-autocomplete__list-item"
    id="downshift-2-item-2"
    role="option"
  >
    Crackers 
    <strong>
      (2)
    </strong>
  </li>
  <li
    aria-selected="false"
    class="ds-c-autocomplete__list-item"
    id="downshift-2-item-3"
    role="option"
  >
    <a
      href="https://duckduckgo.com/?q=snacks"
    >
      Search all snacks
    </a>
  </li>
</ul>
`;
